onehot encoding of top categories

--- a/categorical_variable_encoding.ipynb
+++ b/categorical_variable_encoding.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-28T14:08:30.336763Z",
-     "start_time": "2020-06-28T14:08:30.324279Z"
+     "end_time": "2020-06-30T13:03:38.474648Z",
+     "start_time": "2020-06-30T13:03:36.834618Z"
     }
    },
    "outputs": [],
@@ -2167,6 +2167,97 @@
    "source": [
     "x_train[\"cabin\"].unique()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OneHotEncoding Top Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T13:03:41.521712Z",
+     "start_time": "2020-06-30T13:03:41.496708Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1460, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load dataset\n",
+    "data = pd.read_csv(\n",
+    "    'data/housing.csv',\n",
+    "    usecols=['Neighborhood', 'Exterior1st', 'Exterior2nd', 'SalePrice']\n",
+    ")\n",
+    "print(data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T13:05:03.645135Z",
+     "start_time": "2020-06-30T13:05:03.635731Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neighborhood : 25 labels\n",
+      "Exterior1st : 15 labels\n",
+      "Exterior2nd : 16 labels\n",
+      "SalePrice : 663 labels\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lets take a look at cardinality of each feature\n",
+    "[print(f\"{col} : {len(data[col].unique())} labels\") for col in data.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
