ohe with feature engine

--- a/categorical_variable_encoding.ipynb
+++ b/categorical_variable_encoding.ipynb
@@ -2851,6 +2851,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### OneHotEncoding with Feature Engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T13:25:44.186428Z",
+     "start_time": "2020-06-30T13:25:44.178694Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1022, 3), (438, 3))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# split into train and test\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    data[['Neighborhood', 'Exterior1st', 'Exterior2nd']],  # predictors\n",
+    "    data['SalePrice'],  # target\n",
+    "    test_size=0.3,  # percentage of obs in test set\n",
+    "    random_state=0)  # seed to ensure reproducibility\n",
+    "\n",
+    "x_train.shape, x_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T13:26:58.115746Z",
+     "start_time": "2020-06-30T13:26:58.100265Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OneHotCategoricalEncoder(drop_last=True, top_categories=10,\n",
+       "                         variables=['Neighborhood', 'Exterior1st',\n",
+       "                                    'Exterior2nd'])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoder = OneHotCategoricalEncoder(\n",
+    "    top_categories=10, # this is where we specify the top_n categories\n",
+    "    variables=['Neighborhood', 'Exterior1st', 'Exterior2nd'],\n",
+    "    drop_last=True, # k-1 encoding\n",
+    ")\n",
+    "encoder.fit(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T13:27:09.630925Z",
+     "start_time": "2020-06-30T13:27:09.626976Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Neighborhood': ['NAmes',\n",
+       "  'CollgCr',\n",
+       "  'OldTown',\n",
+       "  'Edwards',\n",
+       "  'Sawyer',\n",
+       "  'Somerst',\n",
+       "  'Gilbert',\n",
+       "  'NWAmes',\n",
+       "  'NridgHt',\n",
+       "  'SawyerW'],\n",
+       " 'Exterior1st': ['VinylSd',\n",
+       "  'HdBoard',\n",
+       "  'Wd Sdng',\n",
+       "  'MetalSd',\n",
+       "  'Plywood',\n",
+       "  'CemntBd',\n",
+       "  'BrkFace',\n",
+       "  'WdShing',\n",
+       "  'Stucco',\n",
+       "  'AsbShng'],\n",
+       " 'Exterior2nd': ['VinylSd',\n",
+       "  'Wd Sdng',\n",
+       "  'HdBoard',\n",
+       "  'MetalSd',\n",
+       "  'Plywood',\n",
+       "  'CmentBd',\n",
+       "  'Wd Shng',\n",
+       "  'BrkFace',\n",
+       "  'AsbShng',\n",
+       "  'Stucco']}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoder.encoder_dict_"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
