--- a/categorical_variable_encoding.ipynb
+++ b/categorical_variable_encoding.ipynb
@@ -3855,18 +3855,289 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-30T14:54:23.469514Z",
      "start_time": "2020-06-30T14:54:23.464733Z"
     }
    },
-   "outputs": [],
    "source": [
     "#### Ordinal Encoding with feature engine"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T14:56:13.048697Z",
+     "start_time": "2020-06-30T14:56:13.041409Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1022, 3), (438, 3))"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# split into train and test\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    data[['Neighborhood', 'Exterior1st', 'Exterior2nd']],  # predictors\n",
+    "    data['SalePrice'],  # target\n",
+    "    test_size=0.3,  # percentage of obs in test set\n",
+    "    random_state=0)  # seed to ensure reproducibility\n",
+    "\n",
+    "x_train.shape, x_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T14:57:09.035130Z",
+     "start_time": "2020-06-30T14:57:09.026492Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrdinalCategoricalEncoder(encoding_method='arbitrary',\n",
+       "                          variables=['Neighborhood', 'Exterior1st',\n",
+       "                                     'Exterior2nd'])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ordinal_encoder = OrdinalCategoricalEncoder(\n",
+    "    encoding_method=\"arbitrary\",\n",
+    "    variables=['Neighborhood', 'Exterior1st', 'Exterior2nd']\n",
+    ")\n",
+    "ordinal_encoder.fit(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T14:57:29.677307Z",
+     "start_time": "2020-06-30T14:57:29.673144Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Neighborhood': {'CollgCr': 0,\n",
+       "  'ClearCr': 1,\n",
+       "  'BrkSide': 2,\n",
+       "  'Edwards': 3,\n",
+       "  'SWISU': 4,\n",
+       "  'Sawyer': 5,\n",
+       "  'Crawfor': 6,\n",
+       "  'NAmes': 7,\n",
+       "  'Mitchel': 8,\n",
+       "  'Timber': 9,\n",
+       "  'Gilbert': 10,\n",
+       "  'Somerst': 11,\n",
+       "  'MeadowV': 12,\n",
+       "  'OldTown': 13,\n",
+       "  'BrDale': 14,\n",
+       "  'NWAmes': 15,\n",
+       "  'NridgHt': 16,\n",
+       "  'SawyerW': 17,\n",
+       "  'NoRidge': 18,\n",
+       "  'IDOTRR': 19,\n",
+       "  'NPkVill': 20,\n",
+       "  'StoneBr': 21,\n",
+       "  'Blmngtn': 22,\n",
+       "  'Veenker': 23,\n",
+       "  'Blueste': 24},\n",
+       " 'Exterior1st': {'VinylSd': 0,\n",
+       "  'Wd Sdng': 1,\n",
+       "  'WdShing': 2,\n",
+       "  'HdBoard': 3,\n",
+       "  'MetalSd': 4,\n",
+       "  'AsphShn': 5,\n",
+       "  'BrkFace': 6,\n",
+       "  'Plywood': 7,\n",
+       "  'CemntBd': 8,\n",
+       "  'Stucco': 9,\n",
+       "  'BrkComm': 10,\n",
+       "  'AsbShng': 11,\n",
+       "  'ImStucc': 12,\n",
+       "  'CBlock': 13,\n",
+       "  'Stone': 14},\n",
+       " 'Exterior2nd': {'VinylSd': 0,\n",
+       "  'Wd Sdng': 1,\n",
+       "  'Plywood': 2,\n",
+       "  'Wd Shng': 3,\n",
+       "  'HdBoard': 4,\n",
+       "  'MetalSd': 5,\n",
+       "  'AsphShn': 6,\n",
+       "  'CmentBd': 7,\n",
+       "  'BrkFace': 8,\n",
+       "  'Stucco': 9,\n",
+       "  'ImStucc': 10,\n",
+       "  'Stone': 11,\n",
+       "  'AsbShng': 12,\n",
+       "  'Brk Cmn': 13,\n",
+       "  'CBlock': 14,\n",
+       "  'Other': 15}}"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ordinal_encoder.encoder_dict_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-30T14:58:20.982864Z",
+     "start_time": "2020-06-30T14:58:20.962028Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Exterior1st</th>\n",
+       "      <th>Exterior2nd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1384</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Neighborhood  Exterior1st  Exterior2nd\n",
+       "64               0            0            0\n",
+       "682              1            1            1\n",
+       "960              2            1            2\n",
+       "1384             3            2            3\n",
+       "1100             4            1            1"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train = ordinal_encoder.transform(x_train)\n",
+    "x_test = ordinal_encoder.transform(x_test)\n",
+    "\n",
+    "x_train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count/Frequency Encoding \n",
+    "\n",
+    "<b> Advantages: </b>\n",
+    "\n",
+    "- Simple\n",
+    "- Does not expand the feature space\n",
+    "\n",
+    "<b> Disadvantages: </b>\n",
+    "\n",
+    "- If 2 different categories appear the same amount of times in the dataset, that is, they appear in the same number of observations, they will be replaced by the same number: may lose valuable information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
